# tea

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example.tea  main.c  tea.y  tea_grammar.y
.github/workflows/: submission.yml  test.yml
examples/: 001_comments.tea  001_variable_declaration.tea  002_basic_types.tea  002_comments.tea  003_variable_declaration.tea  003_variables.tea  004_null_optional.tea  004_simple_expressions.tea  005_arithmetic.tea  005_conditional_operations.tea  006_comparison.tea  006_while_loops.tea  007_logical_operators.tea  007_structs.tea  008_func_declaration.tea  008_operator_precedence.tea  009_if_else.tea  009_logical_operators.tea  010_mutable_functions.tea  010_while_loops.tea  011_break_continue.tea  011_function_calls.tea  012_functions.tea  012_struct_instantiation.tea  013_function_returns.tea  013_string_literals.tea  014_field_access.tea  014_mutable_functions.tea  015_field_access.tea  015_struct_methods.tea  015_structs.tea  016_break_statements.tea  016_field_access.tea  016_native_functions.tea  016_struct_methods.tea  017_continue_statements.tea  017_struct_methods.tea  017_unicode_strings.tea  018_traits.tea
include/: tea.h  tea_ast.h  tea_expr.h  tea_expression.h  tea_fn.h  tea_function.h  tea_interp.h  tea_interpret.h  tea_lang.h  tea_lexer.h  tea_list.h  tea_log.h  tea_memory.h  tea_parser.h  tea_scope.h  tea_statement.h  tea_stmt.h  tea_struct.h  tea_token.h  tea_trait.h  tea_value.h
src/: ast.c  main.c  parser.c  tea.c  tea_ast.c  tea_expr.c  tea_expression.c  tea_fn.c  tea_function.c  tea_interp.c  tea_interpret.c  tea_lexer.c  tea_list.c  tea_memory.c  tea_parser.c  tea_scope.c  tea_statement.c  tea_stmt.c  tea_struct.c  tea_token.c  tea_trait.c  tea_value.c  tokenizer.c
